# whatsup_group_analyzer

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: deploy.yml
bridge-baileys/: index.js  package-lock.json  package.json
scripts/: create_user.py  deploy.sh  restart_server.sh
src/: __init__.py  app.py  auth.py  config.py  export_chats_to_gcs.py  gcp_secrets.py  gcs_client.py  gemini_client.py  google_auth.py  history_processor.py  logger.py  mcp_server.py  sheets_client.py  wa_handlers.py
static/: index.html  login.html  logs.html  qr.html
